--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://HectorLeonelPro.github.io/TodoListApp",
+  "homepage": "https://HectorLeonelPro.github.io/TodoListApp2",
   "devDependencies": {
     "gh-pages": "^6.1.1"
   }
